--- a/articles/rfi/999960.md
+++ b/articles/rfi/999960.md
@@ -1,5 +1,5 @@
-<!--1713451513000-->
-[港府疑以行政手段消弭法庭裁决 记协获批就车牌查册新安排违宪提覆核](https://www.rfi.fr/cn/%E9%A6%99%E6%B8%AF/20240418-%E6%B8%AF%E5%BA%9C%E7%96%91%E4%BB%A5%E8%A1%8C%E6%94%BF%E6%89%8B%E6%AE%B5%E6%B6%88%E5%BC%AD%E6%B3%95%E5%BA%AD%E8%A3%81%E5%86%B3-%E8%AE%B0%E5%8D%8F%E8%8E%B7%E6%89%B9%E5%B0%B1%E8%BD%A6%E7%89%8C%E6%9F%A5%E5%86%8C%E6%96%B0%E5%AE%89%E6%8E%92%E8%BF%9D%E5%AE%AA%E6%8F%90%E8%A6%86%E6%A0%B8)
+<!--1713476702000-->
+[乌克兰称成功袭击克里米亚俄机场 俄军空袭乌北部城市](https://www.rfi.fr/cn/%E6%AC%A7%E6%B4%B2/20240418-%E4%B9%8C%E5%85%8B%E5%85%B0%E7%A7%B0%E6%88%90%E5%8A%9F%E8%A2%AD%E5%87%BB%E5%85%8B%E9%87%8C%E7%B1%B3%E4%BA%9A%E4%BF%84%E6%9C%BA%E5%9C%BA-%E4%BF%84%E5%86%9B%E7%A9%BA%E8%A2%AD%E4%B9%8C%E5%8C%97%E9%83%A8%E5%9F%8E%E5%B8%82)
 ------
 
-<div>18/04/2024 - 10:07</div><img src="https://s.rfi.fr/media/display/74d37194-fd5a-11ee-a779-005056a90284/w:1280/p:16x9/18.4%20%E8%94%A1%E7%8E%89%E7%8E%B2%E5%8B%9D%E8%A8%B4%EF%BC%8C%E4%BD%86%E8%A3%81%E6%B1%BA%E6%8C%87%E6%96%B0%E8%81%9E%E6%87%89%E5%B1%AC%E8%BB%8A%E7%89%8C%E6%9F%A5%E5%86%8A%E7%9B%AE%E7%9A%84%E4%B9%8B%E8%A3%81%E6%B1%BA%EF%BC%8C%E8%A2%AB%E9%81%8B%E8%BC%B8%E7%BD%B2%E7%9A%84%E6%96%B0%E5%AE%89%E6%8E%92%E5%BC%84%E8%87%B3%E6%9C%89%E7%AD%89%E6%96%BC%E7%84%A1%E3%80%82%28%E7%B6%B2%E4%B8%8A%E8%B3%87%E6%96%99%E5%9C%96%E7%89%87%29.gif"><p><strong>香港的最高级法院早前裁定，新闻调查应包含在查阅车辆登记资料(俗称「查册」)的选项中，运输部门其後修订政策，把新闻用途列入查册用途，但须经书面申请并详细列出目的及相关资料，再由运输署长审批，但新政策实施三个多月以来，署方从未批出任何一宗申请。香港记者协会(记协)为此提出司法覆核，指署方的拖延手法对言论及新闻自由构成不正当限制，要求颁令裁定新政策违宪，获法庭批准，稍後排期正式聆讯。        </strong></p><div><p>运输署因应最高级的终审法院裁决，於1月8日实施收紧车辆查册的新安排，根据《申请车辆登记细节证明书的指引》，新闻采访不属於可以自动查册的三个目的之一，而是须经运输署长审批的「例外情况」，而作出书面申请时须同时提交详细资料，令署长信纳申请符合「重大公众利益」丶资料不会被滥用等条件，才会获批查册。</p><p>网媒《集志社》本月初报道，截至上月底，运输署接获的16 宗「例外情况」申请，暂没成功个案，其中七宗撤回丶一宗遭拒丶八宗仍在处理中，当中半数被署方要求提交进一步资料。申请绝大部份属新闻用途申请，占 13宗，涉及四家新闻机构。</p><p>记协就此於本月5日入禀高等法院申请司法覆核，指署方的新安排与言论和新闻自由原则不一致，不合理地要求记者就其调查提交巨细无遗的资料，包括申请符合哪些公众利益？为何记者手上资料不足以报道等，认为有关要求是对新闻行业的误解，与人权原则不符。</p><p>记协又指出，自新措施实施三个多月来，署方处理为新闻采访目的而查册的申请，不合理地漫长及缓慢，至今未有任何记者成功查册，显见有关做法等同拒绝申请，与终审法院就相关案件的判决有冲突，要求法庭颁令《指引》不符合《香港人权法案条例》及《基本法》下对新闻及言论自由的保障，属越权或违宪，并要求法庭下令署方须迅速及在合理时间内对新闻用途的查册申请作出决定。</p><p>高等法院法官高浩文昨(17日)天颁下书面判决，向记协批出司法覆核许可，并着记协与运输署双方在两周内提供日期，以便排期正审，但日期不会早於7月。</p><p>事缘时任香港电台《铿锵集》编导蔡玉玲因跟进 「7.21 」元朗地铁站袭击事件丶以新闻目的向运输署申请车牌查册，但被指虚报资料，被判罪名成立，她一直上於至终审法院才获判胜诉。终院在裁决中指出，运输署无理由将「真诚的新闻调查」，例如怀疑车主使用其车辆干犯某罪行，排除在车牌查册目的的所有选项以外。署方於1月推出查册新指引。</p><div data-selfpromo-newsletter></div><div data-selfpromo-app></div></div><div><div>分享 :</div><div><a href="https://www.facebook.com/dialog/share?app_id=113191652055439&amp;href=https%3A%2F%2Frfi.my%2FAWka.F&amp;redirect_uri=https%3A%2F%2Fwww.rfi.fr%2Fcn%2F%25E9%25A6%2599%25E6%25B8%25AF%2F20240418-%25E6%25B8%25AF%25E5%25BA%259C%25E7%2596%2591%25E4%25BB%25A5%25E8%25A1%258C%25E6%2594%25BF%25E6%2589%258B%25E6%25AE%25B5%25E6%25B6%2588%25E5%25BC%25AD%25E6%25B3%2595%25E5%25BA%25AD%25E8%25A3%2581%25E5%2586%25B3-%25E8%25AE%25B0%25E5%258D%258F%25E8%258E%25B7%25E6%2589%25B9%25E5%25B0%25B1%25E8%25BD%25A6%25E7%2589%258C%25E6%259F%25A5%25E5%2586%258C%25E6%2596%25B0%25E5%25AE%2589%25E6%258E%2592%25E8%25BF%259D%25E5%25AE%25AA%25E6%258F%2590%25E8%25A6%2586%25E6%25A0%25B8&amp;locale=zh_CN" target="_blank" rel="noopener nofollow"><span></span></a><a href="whatsapp://send?text=%E6%B8%AF%E5%BA%9C%E7%96%91%E4%BB%A5%E8%A1%8C%E6%94%BF%E6%89%8B%E6%AE%B5%E6%B6%88%E5%BC%AD%E6%B3%95%E5%BA%AD%E8%A3%81%E5%86%B3%20%E8%AE%B0%E5%8D%8F%E8%8E%B7%E6%89%B9%E5%B0%B1%E8%BD%A6%E7%89%8C%E6%9F%A5%E5%86%8C%E6%96%B0%E5%AE%89%E6%8E%92%E8%BF%9D%E5%AE%AA%E6%8F%90%E8%A6%86%E6%A0%B8%20-%20https%3A%2F%2Frfi.my%2FAWka.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://web.whatsapp.com/send?text=%E6%B8%AF%E5%BA%9C%E7%96%91%E4%BB%A5%E8%A1%8C%E6%94%BF%E6%89%8B%E6%AE%B5%E6%B6%88%E5%BC%AD%E6%B3%95%E5%BA%AD%E8%A3%81%E5%86%B3%20%E8%AE%B0%E5%8D%8F%E8%8E%B7%E6%89%B9%E5%B0%B1%E8%BD%A6%E7%89%8C%E6%9F%A5%E5%86%8C%E6%96%B0%E5%AE%89%E6%8E%92%E8%BF%9D%E5%AE%AA%E6%8F%90%E8%A6%86%E6%A0%B8%20-%20https%3A%2F%2Frfi.my%2FAWka.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://x.com/intent/tweet?url=https%3A%2F%2Frfi.my%2FAWka.X&amp;via=RFI_Cn&amp;related=RFI_Cn&amp;text=%E6%B8%AF%E5%BA%9C%E7%96%91%E4%BB%A5%E8%A1%8C%E6%94%BF%E6%89%8B%E6%AE%B5%E6%B6%88%E5%BC%AD%E6%B3%95%E5%BA%AD%E8%A3%81%E5%86%B3%20%E8%AE%B0%E5%8D%8F%E8%8E%B7%E6%89%B9%E5%B0%B1%E8%BD%A6%E7%89%8C%E6%9F%A5%E5%86%8C%E6%96%B0%E5%AE%89%E6%8E%92%E8%BF%9D%E5%AE%AA%E6%8F%90%E8%A6%86%E6%A0%B8&amp;lang=zh-cn" target="_blank" rel="noopener nofollow"><span></span></a><span data-root-share><share-button v-on:open="openModal"></share-button><share-modal v-if="displayModal" v-on:close="closeModal"></share-modal></span></div></div>
+<div>18/04/2024 - 22:36</div><img src="https://s.rfi.fr/media/display/c27b141e-fccf-11ee-a8c2-005056bf30b7/w:1280/p:16x9/2024-04-17T144304Z_1281641736_RC2987ATK3R3_RTRMADP_3_UKRAINE-CRISIS-ATTACK-CHERNIHIV.JPG"><p><strong>乌克兰18日说，其部队已袭击被吞并的克里米亚半岛上一座大型俄罗斯机场，摧毁大批军事装备。        </strong></p><div><p>据法新社报导，这次袭击发生在17日凌晨，地点在赞科伊（Dzhankoi）附近的一座空军基地，这座空军基地位于莫斯科于2014年占领的克里米亚半岛北部。</p><p>乌克兰军事情报部门说，这次行动很成功，破坏雷达和防空系统和其他目标。 情报部门说：正在查明被摧毁或损坏的敌方航空器数量，以及俄罗斯占领军伤亡人数。</p><p>乌克兰社交媒体前一天曾经流传了据称显示机场爆炸和警报声的视频，但基辅并没有立即发表评论。 乌克兰总统泽连斯基随后在晚间演说中证实他的部队发动了这次袭击，并感谢军方“正确的打击占领者。</p><p><strong>俄军17日空袭乌北部城市 死亡增至 18人 另有78人受伤</strong></p><p>另据中央社18日的综合报导：俄罗斯军队17日空袭了乌克兰北部城市切尔尼戈夫（Chernihiv），期间有3枚导弹击中市中心，乌方官员18日表示，这波攻击造成的死亡人数已升至18人，还有78人受伤。</p><p>路透社报导还说，17日俄军袭击破坏了切尔尼戈夫市的民用基础设施，这是俄罗斯近几周来发动的最致命空袭，乌克兰高层官员也呼吁各国提供更多防空支援。 乌克兰切尔尼戈夫州州长曹斯（Vyacheslav Chaus）在通讯软体Telegram发文写道，搜救行动已经在今天早上结束。</p><p>俄罗斯全面侵略乌克兰的战争已进入第3年，俄国当局否认在这场战争中锁定平民发动攻击。 但切尔尼戈夫代理市长洛马柯（Oleksandr Lomako）17日向当地电视台表示：不幸的是，俄罗斯持续向平民和民用基础设施发动恐怖攻击，针对切尔尼戈夫的袭击再次证实了这 一点。</p><p><strong>布林肯4月23日前往中国访问4天</strong></p><p>此外，美国政治新闻网Politico报导，据1位驻华盛顿外交官和3位了解布林肯行程计画的美国官员透露，布林肯将 在4月23日启程前往中国，进行为期4天的访问。 所有人都被要求匿名，因为他们无权公开谈论这次旅行。 这是布林肯自去年6月以来第二次访问中国。</p><p>美国之音18日报导，美国国务院发言人米勒（Matthew Miller）近日表示，布林肯在访中期间预计将提出美国对于北京正在帮助俄罗斯建立国防工业基础，以延续乌克兰战争的关切。 自俄罗斯在2022年2月全面入侵乌克兰以来，美国就警告中国不要帮助莫斯科的战争行动。</p><p>据华尔街日报近日报导，美国官员称，中国在俄乌战争关键阶段帮助俄国恢复军工生产，为莫斯科提供光学、微电子、无人机发动机和其他军民两用材料，让俄国得以显著增强战场能力。 美方官员私下指出，俄国重振军工产能的速度快于他们预期，可能就是得利于这种外援。 随后中国驻美国大使馆发言人刘鹏宇否认，指中国不是乌克兰危机的制造者或当事方；中方一直在支持政治解决方面发挥建设性作用。 刘鹏宇强调，中国没有向（冲突）任何一方提供武器，中国和俄罗斯之间的正常贸易不应受到干涉和限制。 他说，中国不站在任何一边，并要求美方不要干扰北京和莫斯科之间的正常关系。</p><div data-selfpromo-newsletter></div><div data-selfpromo-app></div></div><div><div>分享 :</div><div><a href="https://www.facebook.com/dialog/share?app_id=113191652055439&amp;href=https%3A%2F%2Frfi.my%2FAWt1.F&amp;redirect_uri=https%3A%2F%2Fwww.rfi.fr%2Fcn%2F%25E6%25AC%25A7%25E6%25B4%25B2%2F20240418-%25E4%25B9%258C%25E5%2585%258B%25E5%2585%25B0%25E7%25A7%25B0%25E6%2588%2590%25E5%258A%259F%25E8%25A2%25AD%25E5%2587%25BB%25E5%2585%258B%25E9%2587%258C%25E7%25B1%25B3%25E4%25BA%259A%25E4%25BF%2584%25E6%259C%25BA%25E5%259C%25BA-%25E4%25BF%2584%25E5%2586%259B%25E7%25A9%25BA%25E8%25A2%25AD%25E4%25B9%258C%25E5%258C%2597%25E9%2583%25A8%25E5%259F%258E%25E5%25B8%2582&amp;locale=zh_CN" target="_blank" rel="noopener nofollow"><span></span></a><a href="whatsapp://send?text=%E4%B9%8C%E5%85%8B%E5%85%B0%E7%A7%B0%E6%88%90%E5%8A%9F%E8%A2%AD%E5%87%BB%E5%85%8B%E9%87%8C%E7%B1%B3%E4%BA%9A%E4%BF%84%E6%9C%BA%E5%9C%BA%20%E4%BF%84%E5%86%9B%E7%A9%BA%E8%A2%AD%E4%B9%8C%E5%8C%97%E9%83%A8%E5%9F%8E%E5%B8%82%20-%20https%3A%2F%2Frfi.my%2FAWt1.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://web.whatsapp.com/send?text=%E4%B9%8C%E5%85%8B%E5%85%B0%E7%A7%B0%E6%88%90%E5%8A%9F%E8%A2%AD%E5%87%BB%E5%85%8B%E9%87%8C%E7%B1%B3%E4%BA%9A%E4%BF%84%E6%9C%BA%E5%9C%BA%20%E4%BF%84%E5%86%9B%E7%A9%BA%E8%A2%AD%E4%B9%8C%E5%8C%97%E9%83%A8%E5%9F%8E%E5%B8%82%20-%20https%3A%2F%2Frfi.my%2FAWt1.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://x.com/intent/tweet?url=https%3A%2F%2Frfi.my%2FAWt1.X&amp;via=RFI_Cn&amp;related=RFI_Cn&amp;text=%E4%B9%8C%E5%85%8B%E5%85%B0%E7%A7%B0%E6%88%90%E5%8A%9F%E8%A2%AD%E5%87%BB%E5%85%8B%E9%87%8C%E7%B1%B3%E4%BA%9A%E4%BF%84%E6%9C%BA%E5%9C%BA%20%E4%BF%84%E5%86%9B%E7%A9%BA%E8%A2%AD%E4%B9%8C%E5%8C%97%E9%83%A8%E5%9F%8E%E5%B8%82&amp;lang=zh-cn" target="_blank" rel="noopener nofollow"><span></span></a><span data-root-share><share-button v-on:open="openModal"></share-button><share-modal v-if="displayModal" v-on:close="closeModal"></share-modal></span></div></div>
