--- a/articles/rfi/999962.md
+++ b/articles/rfi/999962.md
@@ -1,5 +1,5 @@
-<!--1713444302000-->
-[澳大利亚遭袭主教称原谅袭击者](https://www.rfi.fr/cn/%E5%9B%BD%E9%99%85/20240418-%E6%BE%B3%E5%A4%A7%E5%88%A9%E4%BA%9A%E9%81%AD%E8%A2%AD%E4%B8%BB%E6%95%99%E7%A7%B0%E5%8E%9F%E8%B0%85%E8%A2%AD%E5%87%BB%E8%80%85)
+<!--1713476702000-->
+[前中国央行副行长范一飞涉贿受审](https://www.rfi.fr/cn/%E4%B8%AD%E5%9B%BD/20240418-%E5%89%8D%E4%B8%AD%E5%9B%BD%E5%A4%AE%E8%A1%8C%E5%89%AF%E8%A1%8C%E9%95%BF%E8%8C%83%E4%B8%80%E9%A3%9E%E6%B6%89%E8%B4%BF%E5%8F%97%E5%AE%A1)
 ------
 
-<div>18/04/2024 - 11:37</div><img src="https://s.rfi.fr/media/display/0d85d88e-92d5-11ec-8d6f-005056a90321/w:1280/p:16x9/AP21260023686049.jpg"><p><strong>澳大利亚悉尼一名在教堂做礼拜时被刺伤的亚述教会主教今天表示，他已经原谅了袭击他的人。该主教正在迅速康复。与此同时，该国警方加大对主教刺伤后引发的骚乱的调查力度，当局将此案定性为恐袭。        </strong></p><div><p>澳大利亚三天内发生的两起持刀袭击事件：周六发生在邦迪海滩附近一个繁忙的购物中心，造成六人死亡；周一发生在悉尼西部的亚述基督好牧人教堂，令澳大利亚人口最多城市的悉尼居民感到震惊。</p><p>马尔·马里·伊曼纽尔主教在社交媒体上发布的音频消息中说：“我现在很好，恢复得很快，没有必要为我担心。”这是他在袭击发生后首次发表公开评论。 “我原谅任何做出这种行为的人。我将永远为你祈祷，无论是谁派你做这一刺杀，我也原谅他们。”</p><p>伊曼纽尔主教在 TikTok 上拥有大量年轻人追随者，他曾在布道中批评同性恋、新冠疫苗接种和伊斯兰教，他在这次袭击中受伤，这起袭击被视为可疑的宗教极端主义动机的恐怖行为。</p><p>据路透社今天报道称，一名男性青少年因袭击主教而被捕。</p><p>当时，愤怒的人群却在教堂外与急救人员发生冲突，示威者要求将嫌疑袭击者交给他们。</p><p>新南威尔士州警察局长凯伦·韦伯 (Karen Webb) 表示，一名 19 岁男子因参与骚乱而受到指控，他不是教会成员。韦伯在新闻发布会上说，“人们大批参加骚乱。这是可耻和令人恶心的。”</p><p>更多侦探已被派去调查这场骚乱，这场骚乱造成约 50 名警察受伤，20 辆警车受损。</p><p>伊曼纽尔主教在讲话中敦促会众保持冷静并尊重法律。</p><p>警方调查继续时，悉尼邦迪购物中心于周四重新开放，允许里面的人们向遇难者表示哀悼，商店仍然关闭，二楼摆放着白色鲜花悼念。预计企业将从周五开始恢复交易。当地议会市长保拉·马塞洛斯 (Paula Masselos) 告诉美国广播公司 (ABC) 电视台：“我们从震惊到难以置信，再到现在的悲伤，人们需要相当长的时间才能治愈心痛。”</p><p>她说，本周日还将举行烛光守夜活动，鲜花和花束将堆放在临时纪念碑前。</p><div data-selfpromo-newsletter></div><div data-selfpromo-app></div></div><div><div>分享 :</div><div><a href="https://www.facebook.com/dialog/share?app_id=113191652055439&amp;href=https%3A%2F%2Frfi.my%2FAWld.F&amp;redirect_uri=https%3A%2F%2Fwww.rfi.fr%2Fcn%2F%25E5%259B%25BD%25E9%2599%2585%2F20240418-%25E6%25BE%25B3%25E5%25A4%25A7%25E5%2588%25A9%25E4%25BA%259A%25E9%2581%25AD%25E8%25A2%25AD%25E4%25B8%25BB%25E6%2595%2599%25E7%25A7%25B0%25E5%258E%259F%25E8%25B0%2585%25E8%25A2%25AD%25E5%2587%25BB%25E8%2580%2585&amp;locale=zh_CN" target="_blank" rel="noopener nofollow"><span></span></a><a href="whatsapp://send?text=%E6%BE%B3%E5%A4%A7%E5%88%A9%E4%BA%9A%E9%81%AD%E8%A2%AD%E4%B8%BB%E6%95%99%E7%A7%B0%E5%8E%9F%E8%B0%85%E8%A2%AD%E5%87%BB%E8%80%85%20-%20https%3A%2F%2Frfi.my%2FAWld.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://web.whatsapp.com/send?text=%E6%BE%B3%E5%A4%A7%E5%88%A9%E4%BA%9A%E9%81%AD%E8%A2%AD%E4%B8%BB%E6%95%99%E7%A7%B0%E5%8E%9F%E8%B0%85%E8%A2%AD%E5%87%BB%E8%80%85%20-%20https%3A%2F%2Frfi.my%2FAWld.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://x.com/intent/tweet?url=https%3A%2F%2Frfi.my%2FAWld.X&amp;via=RFI_Cn&amp;related=RFI_Cn&amp;text=%E6%BE%B3%E5%A4%A7%E5%88%A9%E4%BA%9A%E9%81%AD%E8%A2%AD%E4%B8%BB%E6%95%99%E7%A7%B0%E5%8E%9F%E8%B0%85%E8%A2%AD%E5%87%BB%E8%80%85&amp;lang=zh-cn" target="_blank" rel="noopener nofollow"><span></span></a><span data-root-share><share-button v-on:open="openModal"></share-button><share-modal v-if="displayModal" v-on:close="closeModal"></share-modal></span></div></div>
+<div>18/04/2024 - 17:14</div><img src="https://s.rfi.fr/media/display/f3fb03a4-0d6f-11ea-b03f-005056bfe576/w:1280/p:16x9/2011-08-11T800-CHINA-YUAN-MIDDAY_0.JPG"><p><strong>遭指“靠金融吃金融”的前中国人民银行（中国央行）副行长范一飞，被控自1993年起，29年内非法收受财物共计折合人民币3.86亿余元。湖北省黄冈市中级人民法院18日公开审理范一飞受贿一案。        </strong></p><div><p>据中央社今天引述中国官方消息，湖北省黄冈市人民检察院起诉指控，1993年至2022年，范一飞利用在前中国人民建设银行信托投资公司任职，在中国建设银行官至副行长，担任中国投资有限责任公司副总经理兼上海银行董事长，及中国人民银行党委委员、副行长等职务上的便利，透过其他国家工作人员职务上的行为，为有关单位和个人在贷款融资、业务承揽、工作调动等事项上提供帮助，直接或者通过其特定关系人非法收受财物共计折合3.86亿余元。</p><p>消息说，范一飞当庭表示认罪悔罪。</p><p>法庭宣布择期宣判。</p><p>北京青年报旗下新媒体“政知见”指出，范一飞长期在金融系统任职，2015年调往中国人行担任副行长时，是当时央行领导班子中最年轻的成员。2022年11月，范一飞在任上被查落马。2023年5月，他被开除党籍和公职。</p><p>据中共中央纪委国家监委的通报指出，范一飞为官不廉，毫无法纪底线且胆大妄为，靠金融吃金融、以钱生钱，长期以“投资”为名大搞权钱交易，利用职务便利为他人在贷款融资、企业经营等方面谋利，并非法收受巨额财物。</p><p>该报道称，今年1月上旬，中国央视播出年度反腐大片“持续发力纵深推进”，范一飞还出镜忏悔。</p><div data-selfpromo-newsletter></div><div data-selfpromo-app></div></div><div><div>分享 :</div><div><a href="https://www.facebook.com/dialog/share?app_id=113191652055439&amp;href=https%3A%2F%2Frfi.my%2FAWqH.F&amp;redirect_uri=https%3A%2F%2Fwww.rfi.fr%2Fcn%2F%25E4%25B8%25AD%25E5%259B%25BD%2F20240418-%25E5%2589%258D%25E4%25B8%25AD%25E5%259B%25BD%25E5%25A4%25AE%25E8%25A1%258C%25E5%2589%25AF%25E8%25A1%258C%25E9%2595%25BF%25E8%258C%2583%25E4%25B8%2580%25E9%25A3%259E%25E6%25B6%2589%25E8%25B4%25BF%25E5%258F%2597%25E5%25AE%25A1&amp;locale=zh_CN" target="_blank" rel="noopener nofollow"><span></span></a><a href="whatsapp://send?text=%E5%89%8D%E4%B8%AD%E5%9B%BD%E5%A4%AE%E8%A1%8C%E5%89%AF%E8%A1%8C%E9%95%BF%E8%8C%83%E4%B8%80%E9%A3%9E%E6%B6%89%E8%B4%BF%E5%8F%97%E5%AE%A1%20-%20https%3A%2F%2Frfi.my%2FAWqH.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://web.whatsapp.com/send?text=%E5%89%8D%E4%B8%AD%E5%9B%BD%E5%A4%AE%E8%A1%8C%E5%89%AF%E8%A1%8C%E9%95%BF%E8%8C%83%E4%B8%80%E9%A3%9E%E6%B6%89%E8%B4%BF%E5%8F%97%E5%AE%A1%20-%20https%3A%2F%2Frfi.my%2FAWqH.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://x.com/intent/tweet?url=https%3A%2F%2Frfi.my%2FAWqH.X&amp;via=RFI_Cn&amp;related=RFI_Cn&amp;text=%E5%89%8D%E4%B8%AD%E5%9B%BD%E5%A4%AE%E8%A1%8C%E5%89%AF%E8%A1%8C%E9%95%BF%E8%8C%83%E4%B8%80%E9%A3%9E%E6%B6%89%E8%B4%BF%E5%8F%97%E5%AE%A1&amp;lang=zh-cn" target="_blank" rel="noopener nofollow"><span></span></a><span data-root-share><share-button v-on:open="openModal"></share-button><share-modal v-if="displayModal" v-on:close="closeModal"></share-modal></span></div></div><br><hr><div>获取更多RSS：<br><a href="https://feedx.net" style="color:orange" target="_blank">https://feedx.net</a> <br><a href="https://feedx.run" style="color:orange" target="_blank">https://feedx.run</a><br></div>
