--- a/articles/rfi/999979.md
+++ b/articles/rfi/999979.md
@@ -1,5 +1,5 @@
-<!--1713406501000-->
-[拜登要保护美国钢铁和造船业免受中国不公平竞争影响 - 要闻分析](https://www.rfi.fr/cn/%E4%B8%93%E6%A0%8F%E6%A3%80%E7%B4%A2/%E8%A6%81%E9%97%BB%E5%88%86%E6%9E%90/20240417-%E6%8B%9C%E7%99%BB%E8%A6%81%E4%BF%9D%E6%8A%A4%E7%BE%8E%E5%9B%BD%E9%92%A2%E9%93%81%E5%92%8C%E9%80%A0%E8%88%B9%E4%B8%9A%E5%85%8D%E5%8F%97%E4%B8%AD%E5%9B%BD%E4%B8%8D%E5%85%AC%E5%B9%B3%E7%AB%9E%E4%BA%89%E5%BD%B1%E5%93%8D)
+<!--1713431702000-->
+[韩囯将在今年内拨款2亿美元向乌克兰提供人道主义援助](https://www.rfi.fr/cn/%E5%9B%BD%E9%99%85/20240418-%E9%9F%A9%E5%9B%AF%E5%B0%86%E5%9C%A8%E4%BB%8A%E5%B9%B4%E5%86%85%E6%8B%A8%E6%AC%BE2%E4%BA%BF%E7%BE%8E%E5%85%83%E5%90%91%E4%B9%8C%E5%85%8B%E5%85%B0%E6%8F%90%E4%BE%9B%E4%BA%BA%E9%81%93%E4%B8%BB%E4%B9%89%E6%8F%B4%E5%8A%A9)
 ------
 
-<div>17/04/2024 - 21:00</div><img src="https://s.rfi.fr/media/display/73a8772a-f6f1-11ee-b8cd-005056bfb2b6/w:1280/p:16x9/2024-04-10T023842Z_2041466065_RC2VT6ATFRE2_RTRMADP_3_ISRAEL-PALESTINIANS-BIDEN.JPG"><p><strong>正在进行竞选连任的美国总统拜登17日表示将以对抗“不公平竞争”为由，敦促对中国钢铁和铝征收3倍关税。美国贸易代表办公室（USTR）也在同一天宣布将对中国在造船、海运和物流领域的贸易行为展开调查，以回应美国5个工会近期的请愿。                    </strong></p><div><p>拜登和他的竞选对手特朗普都在争夺至关重要的蓝领选民，并承诺将重振美国制造业。特朗普曾发誓: 要对中国等国家增加关税。拜登则在17日对匹兹堡的钢铁工人发表讲话，公布多项取悦钢铁工人的措施，包括将特朗普政府对中国钢铁产品征收的7.5%的关税提高到25%、向墨西哥施压禁止中国转道墨西哥向美国销售钢铁及铝产品，同时对中国在造船、海事及物流领域的贸易做法启动可能导致更高关税的反倾销调查。</p><p>白宫发表声明说：“中国对其国内钢铁和铝业的政策和补贴，意味着高品质的美国产品被以人为压低价格的中国替代品所削弱，而中国替代品生产过程的碳排放更高。”一名美国资深官员告诉媒体，中国占全球钢铁产量的一半，并以远低于美国钢铁的价格对外出口。</p><p>拜登总统宣布的对中国钢铁和铝产品提高征收关税，还有待于美国贸易代表办公室在完成对特朗普总统时期的关税进行审核后的批准。美国贸易代表戴琪（Katherine Tai）4月16日在众议院表示，她的办公室“非常接近于完成”对中国关税的审核。</p><p>据白宫17日发表的情况说明书，拜登政府宣布采取新行动，是为了保护美国钢铁和造船业免受中国不公平行为的影响。有以下五大理由：</p><p>第一：美国工人继续面临来自中国进口钢铁和铝产品的不公平竞争，这些产品是世界上排放最密集的产品之一。</p><p>第二，拜登总统上任以来，商务部已对钢铁相关产品征收30多项反倾销和反补贴税，还对中国出口商的反竞争行为以及中国等国家规避贸易规则的行为进行了近 27 项调查。</p><p>第三，拜登总统正在指示他的高级团队与墨西哥合作，共同防止中国和其他国家逃避从墨西哥进口到美国的钢铝关税。 </p><p>第四，美国贸易代表正在对中国在造船、海事和物流领域的不公平贸易行为发起调查。这项调查是在美国钢铁工人联合会（USW）和其他四个工会提交请愿书之后进行的。</p><p>第五，拜登总统正在投资清洁的美国制造钢铁。今天的公告建立在政府对绿色钢铁生产的承诺之上。</p><p>美联社评论说，拜登总统提高对中国钢铁产品进口关税的举动，反映了拜登政府的国际贸易政策，与其争取关键摇摆州选票的努力出现交集的情况。不过，白宫坚称，这更是为了保护美国制造业免受中国不公平贸易做法之害，而不仅仅是为了激发工会成员的投票热情。</p><p>有分析表示，白宫此举可能会激怒北京中南海。另外，此举的经济风险还在于：对中国钢铁及铝产品征收更高关税，将可能使钢铁与铝产品成本价格升高，也将提升汽车、建筑材料和其他关键消费者产品的成本和价格。尽管美国的高通胀已是拜登总统的政治包袱，但拜登总统转向贸易保护主义，更是与其竞争对手特朗普的政策看齐。而所谓的301条款调查则是当年特朗普政府在与北京当局贸易战中的主要工具，用来证明征收关税的合理性。</p><div data-selfpromo-newsletter></div><div data-selfpromo-app></div></div><div><div><div><div><span>作者：</span><a href="/cn/%E4%BD%9C%E8%80%85/%E8%82%96%E6%9B%BC/" title="肖曼">肖曼</a></div></div></div></div>
+<div>18/04/2024 - 08:48</div><img src="https://s.rfi.fr/media/display/c27b141e-fccf-11ee-a8c2-005056bf30b7/w:1280/p:16x9/2024-04-17T144304Z_1281641736_RC2987ATK3R3_RTRMADP_3_UKRAINE-CRISIS-ATTACK-CHERNIHIV.JPG"><p><strong>韩囯将在今年内拨款2亿美元向乌克兰提供人道主义援助，这是韩国经济副总理兼企划财政部长官崔相穆4月17日在华盛顿表示的。        </strong></p><div><p>韩联社报道，崔相穆当天在华盛顿出席第五次援乌圆桌会议。他介绍，韩国正在落实总统尹锡悦去年9月在二十国集团（G20）峰会上发布的援乌项目。</p><p>韩方还将为世界银行（WB）和欧洲复兴开发银行（EBRD）的援乌基金各出资5000万美元。韩国政府将从韩国对外经济合作基金（EDCF）中划拨21亿美元资金，对乌克兰提供援助。其中包括韩乌领导人去年7月举行会谈时韩方承诺的1亿美元。</p><p>今年早些时候，美国国务院官员公开表态“希望韩国扩大对乌援助”，于是韩方重申对乌克兰仅提供非杀伤性武器援助的既有立场，并向乌克兰援助了扫雷装备、急救车、防护服等防御军事装备。</p><p>韩国总统办公室2月15日表示，韩国正式加入由七国集团（G7）主导成立的负责援助乌克兰重建工作的多机构捐助者协调小组（MDCP）。</p><div data-selfpromo-newsletter></div><div data-selfpromo-app></div></div><div><div>分享 :</div><div><a href="https://www.facebook.com/dialog/share?app_id=113191652055439&amp;href=https%3A%2F%2Frfi.my%2FAWjV.F&amp;redirect_uri=https%3A%2F%2Fwww.rfi.fr%2Fcn%2F%25E5%259B%25BD%25E9%2599%2585%2F20240418-%25E9%259F%25A9%25E5%259B%25AF%25E5%25B0%2586%25E5%259C%25A8%25E4%25BB%258A%25E5%25B9%25B4%25E5%2586%2585%25E6%258B%25A8%25E6%25AC%25BE2%25E4%25BA%25BF%25E7%25BE%258E%25E5%2585%2583%25E5%2590%2591%25E4%25B9%258C%25E5%2585%258B%25E5%2585%25B0%25E6%258F%2590%25E4%25BE%259B%25E4%25BA%25BA%25E9%2581%2593%25E4%25B8%25BB%25E4%25B9%2589%25E6%258F%25B4%25E5%258A%25A9&amp;locale=zh_CN" target="_blank" rel="noopener nofollow"><span></span></a><a href="whatsapp://send?text=%E9%9F%A9%E5%9B%AF%E5%B0%86%E5%9C%A8%E4%BB%8A%E5%B9%B4%E5%86%85%E6%8B%A8%E6%AC%BE2%E4%BA%BF%E7%BE%8E%E5%85%83%E5%90%91%E4%B9%8C%E5%85%8B%E5%85%B0%E6%8F%90%E4%BE%9B%E4%BA%BA%E9%81%93%E4%B8%BB%E4%B9%89%E6%8F%B4%E5%8A%A9%20-%20https%3A%2F%2Frfi.my%2FAWjV.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://web.whatsapp.com/send?text=%E9%9F%A9%E5%9B%AF%E5%B0%86%E5%9C%A8%E4%BB%8A%E5%B9%B4%E5%86%85%E6%8B%A8%E6%AC%BE2%E4%BA%BF%E7%BE%8E%E5%85%83%E5%90%91%E4%B9%8C%E5%85%8B%E5%85%B0%E6%8F%90%E4%BE%9B%E4%BA%BA%E9%81%93%E4%B8%BB%E4%B9%89%E6%8F%B4%E5%8A%A9%20-%20https%3A%2F%2Frfi.my%2FAWjV.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://x.com/intent/tweet?url=https%3A%2F%2Frfi.my%2FAWjV.X&amp;via=RFI_Cn&amp;related=RFI_Cn&amp;text=%E9%9F%A9%E5%9B%AF%E5%B0%86%E5%9C%A8%E4%BB%8A%E5%B9%B4%E5%86%85%E6%8B%A8%E6%AC%BE2%E4%BA%BF%E7%BE%8E%E5%85%83%E5%90%91%E4%B9%8C%E5%85%8B%E5%85%B0%E6%8F%90%E4%BE%9B%E4%BA%BA%E9%81%93%E4%B8%BB%E4%B9%89%E6%8F%B4%E5%8A%A9&amp;lang=zh-cn" target="_blank" rel="noopener nofollow"><span></span></a><span data-root-share><share-button v-on:open="openModal"></share-button><share-modal v-if="displayModal" v-on:close="closeModal"></share-modal></span></div></div>
