--- a/articles/rfi/999993.md
+++ b/articles/rfi/999993.md
@@ -1,5 +1,5 @@
-<!--1713374103000-->
-[2024年夏季奥运会倒计时100天，巴黎准备好了吗？](https://www.rfi.fr/cn/%E6%B3%95%E5%9B%BD/20240417-2024%E5%B9%B4%E5%A4%8F%E5%AD%A3%E5%A5%A5%E8%BF%90%E4%BC%9A%E5%80%92%E8%AE%A1%E6%97%B6100%E5%A4%A9%EF%BC%8C%E5%B7%B4%E9%BB%8E%E5%87%86%E5%A4%87%E5%A5%BD%E4%BA%86%E5%90%97)
+<!--1713386701000-->
+[戴琦在美国参议院听证会谈中美间不公平竞争](https://www.rfi.fr/cn/%E7%BE%8E%E5%9B%BD/20240417-%E6%88%B4%E7%90%A6%E5%9C%A8%E7%BE%8E%E5%9B%BD%E5%8F%82%E8%AE%AE%E9%99%A2%E5%90%AC%E8%AF%81%E4%BC%9A%E8%B0%88%E4%B8%AD%E7%BE%8E%E9%97%B4%E4%B8%8D%E5%85%AC%E5%B9%B3%E7%AB%9E%E4%BA%89)
 ------
 
-<div>17/04/2024 - 12:03</div><img src="https://s.rfi.fr/media/display/602bcf6c-f025-11ee-a26d-005056bfb2b6/w:1280/p:16x9/000_34MX8FC.jpg"><p><strong>距离2024年巴黎夏季奥运会开幕仅剩100天，巴黎、法国本土其他地区和大溪地的奥运场馆正准备迎接7月26日至8月11日之间即将举行的世界上最大的体育赛事 。        </strong></p><div><p>巴黎届时将拥有15个奥运会比赛场馆，并将在其一些最具标志性的古迹及其周边举办32项奥运会比赛项目中的21项。</p><p>巴黎于2017年获得了本届奥运会的主办权，多年来一直在建设场馆，所有工作计划于2024年初完成。这些新场馆包括巴黎附近的水上运动中心，该中心将举办水球和跳水比赛。在水上运动中心附近，平日里举办橄榄球或足球世界杯的法兰西体育场刚刚修建了一条全新的田径跑道。将迎接羽毛球和艺术体操比赛的拉夏贝尔门体育场是小巴黎唯一新建的奥运场馆。通常迎接各类音乐会的德方斯竞技场将在五月份彻底改造，以容纳举办游泳比赛的奥林匹克游泳池。射击运动员将在距离巴黎数小时车程的法国中部小镇沙托鲁射击中心进行比赛。</p><p>7月26日，数千名运动员将在塞纳河上乘船参加奥运开幕式。塞纳河还将在铁人三项和开放水域游泳比赛中接待游泳运动员。这是自100年前，即1924年巴黎举办奥运会以来，塞纳河首次成为被认为安全的游泳比赛场地。</p><p>塞纳河对岸的大皇宫是为1900年世界博览会而建的，经过翻修后，今年可举办击剑和跆拳道比赛。</p><p>沙滩排球比赛将在埃菲尔铁塔脚下的战神广场上举行，运动员们或将在比赛时目睹铁塔上的日落。</p><p>香榭丽舍大街尽头的协和广场将举办小轮车自由式、滑板和霹雳舞赛事。</p><p>荣军院建于1687年，是一所军事医院和退伍军人养老院，内有法国军事历史博物馆和纪念碑，以及拿破仑·波拿巴的墓。本次奥运会期间，观众将可以前往此地观看射箭、自行车和田径比赛。</p><p>距离巴黎不远处，马术比赛将在凡尔赛宫花园举行。凡尔赛宫是国王路易十四的居所，在法国大革命之前，它一直是皇室的中心。</p><p>在巴黎之外，帆船比赛将在马赛的蔚蓝海岸全新航海中心举行。为了向法国的海外领土致敬，冲浪比赛将在法属波利尼西亚大溪地西南海岸的一个村庄蒂胡波奥举行。这是一个拥有原始自然美景的地方，拥有世界上最著名的冲浪胜地。</p><div data-selfpromo-newsletter></div><div data-selfpromo-app></div></div><div><div>分享 :</div><div><a href="https://www.facebook.com/dialog/share?app_id=113191652055439&amp;href=https%3A%2F%2Frfi.my%2FAWZS.F&amp;redirect_uri=https%3A%2F%2Fwww.rfi.fr%2Fcn%2F%25E6%25B3%2595%25E5%259B%25BD%2F20240417-2024%25E5%25B9%25B4%25E5%25A4%258F%25E5%25AD%25A3%25E5%25A5%25A5%25E8%25BF%2590%25E4%25BC%259A%25E5%2580%2592%25E8%25AE%25A1%25E6%2597%25B6100%25E5%25A4%25A9%25EF%25BC%258C%25E5%25B7%25B4%25E9%25BB%258E%25E5%2587%2586%25E5%25A4%2587%25E5%25A5%25BD%25E4%25BA%2586%25E5%2590%2597&amp;locale=zh_CN" target="_blank" rel="noopener nofollow"><span></span></a><a href="whatsapp://send?text=2024%E5%B9%B4%E5%A4%8F%E5%AD%A3%E5%A5%A5%E8%BF%90%E4%BC%9A%E5%80%92%E8%AE%A1%E6%97%B6100%E5%A4%A9%EF%BC%8C%E5%B7%B4%E9%BB%8E%E5%87%86%E5%A4%87%E5%A5%BD%E4%BA%86%E5%90%97%EF%BC%9F%20-%20https%3A%2F%2Frfi.my%2FAWZS.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://web.whatsapp.com/send?text=2024%E5%B9%B4%E5%A4%8F%E5%AD%A3%E5%A5%A5%E8%BF%90%E4%BC%9A%E5%80%92%E8%AE%A1%E6%97%B6100%E5%A4%A9%EF%BC%8C%E5%B7%B4%E9%BB%8E%E5%87%86%E5%A4%87%E5%A5%BD%E4%BA%86%E5%90%97%EF%BC%9F%20-%20https%3A%2F%2Frfi.my%2FAWZS.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://x.com/intent/tweet?url=https%3A%2F%2Frfi.my%2FAWZS.X&amp;via=RFI_Cn&amp;related=RFI_Cn&amp;text=2024%E5%B9%B4%E5%A4%8F%E5%AD%A3%E5%A5%A5%E8%BF%90%E4%BC%9A%E5%80%92%E8%AE%A1%E6%97%B6100%E5%A4%A9%EF%BC%8C%E5%B7%B4%E9%BB%8E%E5%87%86%E5%A4%87%E5%A5%BD%E4%BA%86%E5%90%97%EF%BC%9F&amp;lang=zh-cn" target="_blank" rel="noopener nofollow"><span></span></a><span data-root-share><share-button v-on:open="openModal"></share-button><share-modal v-if="displayModal" v-on:close="closeModal"></share-modal></span></div></div>
+<div>17/04/2024 - 21:31</div><img src="https://s.rfi.fr/media/display/423cf520-cd54-11ed-9ce3-005056a90284/w:1280/p:16x9/AP23006715775170.jpg"><p><strong>在美国参议院财政委员会关于总统 2024 年贸易政策议程的听证会上，美国贸易代表戴琦发表长篇讲话，涉及众多议题，包括：如何通过贸易赋予工人权力？如何执行贸易协定以创造公平竞争环境等问题。就美国与中国的经贸关系，戴琦认为：公平经济行为的核心是为每个人提供公平的机会。        </strong></p><div><p>戴琦指出<strong>：</strong>当像中国这样的国家继续利用非市场政策和做法来主导行业时，公平竞争是不可能的。这种主导地位使中国能够胁迫其他经济体。</p><p> </p><p>中国的不公平政策和做法摧毁了我国许多工作社区和行业，包括你们各州的许多工作社区和行业。钢铁、铝、太阳能电池板、电池、电动汽车和关键矿物——仅举几例。</p><p> </p><p>中国还利用不公平的政策和做法将某些商品的生产集中在中国，这损害了供应链的弹性，并损害了消费者的利益，从长远来看，消费者被剥夺了公平竞争带来的创新和选择。</p><p> </p><p>正如总统在国情咨文中所说，本届政府将继续抵制中国不公平、非市场的政策和做法。我们正在与志同道合的伙伴和盟友一起这样做，正如你在去年六月我们与澳大利亚、加拿大、日本、新西兰和英国发表的联合声明中看到的那样。</p><p> </p><p>我们看到中国在多个领域造成了依赖和脆弱性，损害了美国工人和企业，并给我们的供应链带来了真正的风险。</p><p> </p><p>这就是为什么我们正在认真研究我们现有的工具如何解决这个问题，包括通过我们对中国 301 关税的四年审查。</p><p> </p><p>这也是为什么在仔细审查了我从五个全国性工会收到的301条款请愿书后，我对中华人民共和国长期以来主导海事、物流和造船业的行为发起了全面彻底的调查。工会的请愿书引发了人们对美国工人、造船业和美国恢复力受到损害的严重担忧。</p><p> </p><p>我们与中国的经济关系很复杂，正如总统所说，我们希望与中国竞争，而不是冲突。 </p><p> </p><p>但竞争必须公平，美国贸易代表办公室和拜登-哈里斯政府每天都在努力将工薪家庭放在第一位，重建美国制造业，并加强我们的供应链。</p><p> </p><p>我们正在利用贸易为每个人提供公平的机会。这意味着创造激励措施不仅仅是降低成本；提高劳工和环境标准；并追求韧性。</p><p> </p><p>戴琦披露：美国贸易代表办公室今年将继续致力于开发创新的贸易工具和战略，将贸易和其他经济政策措施联系起来，以推进这些目标。我要感谢在华盛顿特区和世界各地服务的美国贸易代表办公室团队，感谢他们为全美国服务的坚定奉献和决心。</p><p> </p><p>我认为我们都同意我们的经济体系，包括贸易，应该加强中产阶级的力量。我期待着通过与您和您的员工定期通报情况来继续我们的伙伴关系，就像我们过去三年所做的那样。</p><div data-selfpromo-newsletter></div><div data-selfpromo-app></div></div><div><div>分享 :</div><div><a href="https://www.facebook.com/dialog/share?app_id=113191652055439&amp;href=https%3A%2F%2Frfi.my%2FAWga.F&amp;redirect_uri=https%3A%2F%2Fwww.rfi.fr%2Fcn%2F%25E7%25BE%258E%25E5%259B%25BD%2F20240417-%25E6%2588%25B4%25E7%2590%25A6%25E5%259C%25A8%25E7%25BE%258E%25E5%259B%25BD%25E5%258F%2582%25E8%25AE%25AE%25E9%2599%25A2%25E5%2590%25AC%25E8%25AF%2581%25E4%25BC%259A%25E8%25B0%2588%25E4%25B8%25AD%25E7%25BE%258E%25E9%2597%25B4%25E4%25B8%258D%25E5%2585%25AC%25E5%25B9%25B3%25E7%25AB%259E%25E4%25BA%2589&amp;locale=zh_CN" target="_blank" rel="noopener nofollow"><span></span></a><a href="whatsapp://send?text=%E6%88%B4%E7%90%A6%E5%9C%A8%E7%BE%8E%E5%9B%BD%E5%8F%82%E8%AE%AE%E9%99%A2%E5%90%AC%E8%AF%81%E4%BC%9A%E8%B0%88%E4%B8%AD%E7%BE%8E%E9%97%B4%E4%B8%8D%E5%85%AC%E5%B9%B3%E7%AB%9E%E4%BA%89%20-%20https%3A%2F%2Frfi.my%2FAWga.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://web.whatsapp.com/send?text=%E6%88%B4%E7%90%A6%E5%9C%A8%E7%BE%8E%E5%9B%BD%E5%8F%82%E8%AE%AE%E9%99%A2%E5%90%AC%E8%AF%81%E4%BC%9A%E8%B0%88%E4%B8%AD%E7%BE%8E%E9%97%B4%E4%B8%8D%E5%85%AC%E5%B9%B3%E7%AB%9E%E4%BA%89%20-%20https%3A%2F%2Frfi.my%2FAWga.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://x.com/intent/tweet?url=https%3A%2F%2Frfi.my%2FAWga.X&amp;via=RFI_Cn&amp;related=RFI_Cn&amp;text=%E6%88%B4%E7%90%A6%E5%9C%A8%E7%BE%8E%E5%9B%BD%E5%8F%82%E8%AE%AE%E9%99%A2%E5%90%AC%E8%AF%81%E4%BC%9A%E8%B0%88%E4%B8%AD%E7%BE%8E%E9%97%B4%E4%B8%8D%E5%85%AC%E5%B9%B3%E7%AB%9E%E4%BA%89&amp;lang=zh-cn" target="_blank" rel="noopener nofollow"><span></span></a><span data-root-share><share-button v-on:open="openModal"></share-button><share-modal v-if="displayModal" v-on:close="closeModal"></share-modal></span></div></div>
