--- a/articles/rfi/999997.md
+++ b/articles/rfi/999997.md
@@ -1,5 +1,5 @@
-<!--1713366903000-->
-[昂山素季被由监禁转为监视居住](https://www.rfi.fr/cn/%E4%BA%9A%E6%B4%B2/20240417-%E6%98%82%E5%B1%B1%E7%B4%A0%E5%AD%A3%E8%A2%AB%E7%94%B1%E7%9B%91%E7%A6%81%E8%BD%AC%E4%B8%BA%E7%9B%91%E8%A7%86%E5%B1%85%E4%BD%8F)
+<!--1713374101000-->
+[视频 俄乌战争 俄攻击乌北部城市切尔尼戈夫 已有10人死亡](https://www.rfi.fr/cn/%E7%BE%8E%E5%9B%BD/20240417-%E8%A7%86%E9%A2%91-%E4%BF%84%E4%B9%8C%E6%88%98%E4%BA%89-%E4%BF%84%E6%94%BB%E5%87%BB%E4%B9%8C%E5%8C%97%E9%83%A8%E5%9F%8E%E5%B8%82%E5%88%87%E5%B0%94%E5%B0%BC%E6%88%88%E5%A4%AB-%E5%B7%B2%E6%9C%8910%E4%BA%BA%E6%AD%BB%E4%BA%A1)
 ------
 
-<div>17/04/2024 - 11:36</div><img src="https://s.rfi.fr/media/display/28e80d0a-3049-11ee-a87e-005056a90284/w:1280/p:16x9/AP23213219378174.jpg"><p><strong>缅甸一位消息人士告诉法新社，被废黜的缅甸反对派领导人昂山素季已被执政军政府从监狱转为软禁。 一位不愿透露姓名的缅甸军方消息人士称，缅甸前总统温敏也从这项措施中受益。        </strong></p><div><p>缅甸的昂山素季被从牢房转移至软禁。缅甸军政府发言人佐敏敦称，该国气温热浪促使当局采取措施保护脆弱的被拘留者。 佐敏吞告诉法新社：“不仅昂山素季和温敏，一些老年囚犯也因酷热而得到了必要的护理。”</p><p>78 岁的昂山素季 (Aung San Suu Kyi) 是 1991 年诺贝尔奖获得者，因遭指控腐败和违反 Covid-19 限制等一系列刑事定罪，正在服刑 27 年。 自从昂山素季在 2021 年军队政变被推翻下台，并被军方逮捕以来，她基本上一直消失于公众视线中，仅在内比都法庭拍摄的模糊官方媒体照片中露面过一次，据当地媒体报道，她正面临健康问题。</p><p>当地媒体报道称，在长达数月的庭审中，昂山素季出现头晕、呕吐，有时由于牙齿感染而无法进食。</p><p>据本台报道称，昂山素季的儿子金·阿里斯 (Kim Aris) 今年 2 月告诉法新社，昂山素季仍被关押在军事首都内比都的一座监狱内。 肖恩·特内尔（Sean Turnell）去年向法新社描述，这座综合大楼在炎热时期没有空调系统，混凝土墙在季风期间会渗水，他曾在那里被监禁了几个月。 在这个与世隔绝的首都的监禁与昂山素季在前军政府时期被软禁的岁月相比，条件相差很大，而当时昂山素季在长期的被软禁中成为了世界著名的民主领袖。</p><p>不过，目前无法立即确定对昂山素季的决定是暂时的还是代表某种减刑。</p><p>军政府还在周三今天的新闻稿中宣布，在缅甸新年之际特赦了 3,300 名囚犯。 军政府表示，周三宣布的囚犯大赦包括将被驱逐出境的 13 名印度尼西亚人和 15 名斯里兰卡人。 新闻稿指出，除了那些被判犯有谋杀、恐怖主义和贩毒罪的囚犯外，其他囚犯的刑期将减少六分之一。</p><div data-selfpromo-newsletter></div><div data-selfpromo-app></div></div><div><div>分享 :</div><div><a href="https://www.facebook.com/dialog/share?app_id=113191652055439&amp;href=https%3A%2F%2Frfi.my%2FAWZ2.F&amp;redirect_uri=https%3A%2F%2Fwww.rfi.fr%2Fcn%2F%25E4%25BA%259A%25E6%25B4%25B2%2F20240417-%25E6%2598%2582%25E5%25B1%25B1%25E7%25B4%25A0%25E5%25AD%25A3%25E8%25A2%25AB%25E7%2594%25B1%25E7%259B%2591%25E7%25A6%2581%25E8%25BD%25AC%25E4%25B8%25BA%25E7%259B%2591%25E8%25A7%2586%25E5%25B1%2585%25E4%25BD%258F&amp;locale=zh_CN" target="_blank" rel="noopener nofollow"><span></span></a><a href="whatsapp://send?text=%E6%98%82%E5%B1%B1%E7%B4%A0%E5%AD%A3%E8%A2%AB%E7%94%B1%E7%9B%91%E7%A6%81%E8%BD%AC%E4%B8%BA%E7%9B%91%E8%A7%86%E5%B1%85%E4%BD%8F%20-%20https%3A%2F%2Frfi.my%2FAWZ2.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://web.whatsapp.com/send?text=%E6%98%82%E5%B1%B1%E7%B4%A0%E5%AD%A3%E8%A2%AB%E7%94%B1%E7%9B%91%E7%A6%81%E8%BD%AC%E4%B8%BA%E7%9B%91%E8%A7%86%E5%B1%85%E4%BD%8F%20-%20https%3A%2F%2Frfi.my%2FAWZ2.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://x.com/intent/tweet?url=https%3A%2F%2Frfi.my%2FAWZ2.X&amp;via=RFI_Cn&amp;related=RFI_Cn&amp;text=%E6%98%82%E5%B1%B1%E7%B4%A0%E5%AD%A3%E8%A2%AB%E7%94%B1%E7%9B%91%E7%A6%81%E8%BD%AC%E4%B8%BA%E7%9B%91%E8%A7%86%E5%B1%85%E4%BD%8F&amp;lang=zh-cn" target="_blank" rel="noopener nofollow"><span></span></a><span data-root-share><share-button v-on:open="openModal"></share-button><share-modal v-if="displayModal" v-on:close="closeModal"></share-modal></span></div></div>
+<div>17/04/2024 - 15:49</div><img src="https://s.rfi.fr/media/display/37df5d2e-fca2-11ee-9c32-005056bf30b7/w:1280/p:16x9/2024-04-17T092616Z_1357906527_RC2987AJQIZX_RTRMADP_3_UKRAINE-CRISIS-ATTACK-CHERNIHIV.JPG"><p><strong>俄罗斯今天周三对乌克兰北部城市切尔尼戈夫（Chernihiv）发动的飞弹袭击，造成至少10名居民丧生，并损坏建筑物和市政基础设施，乌克兰总统泽连斯基呼吁西方提供军援，请看France24埃玛纽埃尔-夏泽（Emmanuelle Chaze）报道。        </strong></p><div><p>俄罗斯今天周三对乌克兰北部城市切尔尼戈夫（Chernihiv）发动的飞弹袭击，造成至少10名居民丧生。</p><p>俄罗斯入侵乌克兰的战争持续，乌克兰总统泽连斯基多次发表令人震惊的言论指出，如果没有美国资金支持乌克兰会输掉这场战争。</p><p>目前美国国会仍在阻挠提供6百亿美元对乌克兰的军援。</p><p>乌克兰总统泽连斯基近期刚刚签署了一项有争议的法律，要延长服役时间并加大惩罚逃兵。</p><p>就在这个背景下，乌克兰北部城市切尔尼戈夫镇在本周三上午遭到俄军袭击 。</p><p>France24 驻乌克兰的记者埃玛纽埃尔-夏泽报道，切尔尼戈夫镇 死亡人数很高，目前至少有10人死亡 20多人受伤，死亡人数很可能会上升，急救人员仍在现场。</p><p>切尔尼戈夫镇距离首都基辅大约两三个小时的车程，这里今天至少被三枚俄罗斯导弹击中。</p><p>乌克兰总统泽连斯基在社交网络上说，说如果乌克兰有自卫手段，就是有有效的防空手段那么悲剧就不会发生。</p><p>乌克兰总统指责其盟国缺乏提供军备的决心。</p><p>此前乌克兰外交部长库列巴曾要求盟国提供至少七套爱国防空系统以保护乌克兰最大的城市，如哈尔科夫和敖德萨等 。</p><div data-selfpromo-newsletter></div><div data-selfpromo-app></div></div><div><div>分享 :</div><div><a href="https://www.facebook.com/dialog/share?app_id=113191652055439&amp;href=https%3A%2F%2Frfi.my%2FAWdJ.F&amp;redirect_uri=https%3A%2F%2Fwww.rfi.fr%2Fcn%2F%25E7%25BE%258E%25E5%259B%25BD%2F20240417-%25E8%25A7%2586%25E9%25A2%2591-%25E4%25BF%2584%25E4%25B9%258C%25E6%2588%2598%25E4%25BA%2589-%25E4%25BF%2584%25E6%2594%25BB%25E5%2587%25BB%25E4%25B9%258C%25E5%258C%2597%25E9%2583%25A8%25E5%259F%258E%25E5%25B8%2582%25E5%2588%2587%25E5%25B0%2594%25E5%25B0%25BC%25E6%2588%2588%25E5%25A4%25AB-%25E5%25B7%25B2%25E6%259C%258910%25E4%25BA%25BA%25E6%25AD%25BB%25E4%25BA%25A1&amp;locale=zh_CN" target="_blank" rel="noopener nofollow"><span></span></a><a href="whatsapp://send?text=%E8%A7%86%E9%A2%91%20%E4%BF%84%E4%B9%8C%E6%88%98%E4%BA%89%20%E4%BF%84%E6%94%BB%E5%87%BB%E4%B9%8C%E5%8C%97%E9%83%A8%E5%9F%8E%E5%B8%82%E5%88%87%E5%B0%94%E5%B0%BC%E6%88%88%E5%A4%AB%20%E5%B7%B2%E6%9C%8910%E4%BA%BA%E6%AD%BB%E4%BA%A1%20-%20https%3A%2F%2Frfi.my%2FAWdJ.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://web.whatsapp.com/send?text=%E8%A7%86%E9%A2%91%20%E4%BF%84%E4%B9%8C%E6%88%98%E4%BA%89%20%E4%BF%84%E6%94%BB%E5%87%BB%E4%B9%8C%E5%8C%97%E9%83%A8%E5%9F%8E%E5%B8%82%E5%88%87%E5%B0%94%E5%B0%BC%E6%88%88%E5%A4%AB%20%E5%B7%B2%E6%9C%8910%E4%BA%BA%E6%AD%BB%E4%BA%A1%20-%20https%3A%2F%2Frfi.my%2FAWdJ.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://x.com/intent/tweet?url=https%3A%2F%2Frfi.my%2FAWdJ.X&amp;via=RFI_Cn&amp;related=RFI_Cn&amp;text=%E8%A7%86%E9%A2%91%20%E4%BF%84%E4%B9%8C%E6%88%98%E4%BA%89%20%E4%BF%84%E6%94%BB%E5%87%BB%E4%B9%8C%E5%8C%97%E9%83%A8%E5%9F%8E%E5%B8%82%E5%88%87%E5%B0%94%E5%B0%BC%E6%88%88%E5%A4%AB%20%E5%B7%B2%E6%9C%8910%E4%BA%BA%E6%AD%BB%E4%BA%A1&amp;lang=zh-cn" target="_blank" rel="noopener nofollow"><span></span></a><span data-root-share><share-button v-on:open="openModal"></share-button><share-modal v-if="displayModal" v-on:close="closeModal"></share-modal></span></div></div>
