--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -3,6 +3,8 @@
 
 5-12 [【重温】李承鹏：写在5.12的爱国帖](/articles/cdt/0.md)
 
+4-19 [【CDT报告汇】中国输出数字极权，协助柬埔寨建立“防火墙”（外二篇）](/articles/cdt/341530.md)
+
 4-18 [凤凰WEEKLY｜美国华人父母，培养出多少“失败的谷爱凌”？](/articles/cdt/341533.md)
 
 4-18 [古老板的老巢｜这么搞，还能发展经济吗？](/articles/cdt/341535.md)
@@ -598,6 +600,4 @@
 3-16 [政在发声｜脓包没有戳破而已](/articles/cdt/342631.md)
 
 3-16 [媒派｜跪哭包公女疑似现身：微博哭诉冤情](/articles/cdt/342639.md)
-
-3-15 [北青深一度｜25岁规培女医生之死](/articles/cdt/342649.md)
 
